--- a/A1.css
+++ b/A1.css
@@ -4,11 +4,12 @@ html{
 }
 
 body{
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(230, 165, 247);
     width: 300px;
     border: 15px solid rgb(255, 0, 221);
     padding: 50px;
     margin: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     position: absolute;
     top: 25%;
