--- a/interest.css
+++ b/interest.css
@@ -1,12 +1,6 @@
-h1{
-    color:rgb(214, 40, 10);
-    text-align: center;
-}
 body{
-    
     width: 800px;
-    border: 50px solid rgb(211, 3, 3);
-    background-color: rgb(255, 254, 254);
+    border: 50px solid aqua;
     padding-top: 10px;
     padding-left: 1%;
     padding-right: 1%;
@@ -18,13 +12,10 @@ body{
     text-align: center;
     font-size: 18px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
 }
 html{
-    background-color: pink;
+background-color: rgb(0, 34, 129);
+
 }
-
-
-
 
 
