--- a/job.css
+++ b/job.css
@@ -1,11 +1,7 @@
-h1{
-    color:rgb(214, 40, 10);
-    text-align: center;
-}
 body{
     
     width: 800px;
-    border: 50px solid rgb(211, 3, 3);
+    border: 50px solid rgb(129, 120, 0);
     background-color: rgb(255, 254, 254);
     padding-top: 10px;
     padding-left: 1%;
@@ -21,10 +17,5 @@ body{
     
 }
 html{
-    background-color: pink;
+    background-color: rgb(17, 119, 25);
 }
-
-
-
-
-
